Project

General

Profile

Actions

Bug #48035

closed

Global config overrides do not apply to in-use images

Added by Jason Dillaman over 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus,octopus,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Even after adding support for refreshing the image after updating global or pool-level overrides, images will not pick up any changes from global overrides since the ImageCtx keeps a copy of the config which is not dynamically updated.


Related issues 3 (0 open3 closed)

Copied to rbd - Backport #50714: octopus: Global config overrides do not apply to in-use imagesResolvedCory SnyderActions
Copied to rbd - Backport #50715: nautilus: Global config overrides do not apply to in-use imagesRejectedActions
Copied to rbd - Backport #50716: pacific: Global config overrides do not apply to in-use imagesRejectedIlya DryomovActions
Actions #1

Updated by Jason Dillaman over 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 37894
Actions #2

Updated by Ilya Dryomov about 3 years ago

  • Backport changed from nautilus,octopus to nautilus,octopus,pacific
Actions #3

Updated by Ilya Dryomov about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50714: octopus: Global config overrides do not apply to in-use images added
Actions #5

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50715: nautilus: Global config overrides do not apply to in-use images added
Actions #6

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50716: pacific: Global config overrides do not apply to in-use images added
Actions #7

Updated by Ilya Dryomov over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF